--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de Script SQL de Versiones</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>  <!-- Enlace a la biblioteca Axios para realizar solicitudes HTTP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Generador de Script SQL de Versiones</h1>
+        <h1>Generador de Script SQL de Versiones...</h1>
         <button id="generateBtn">Generar Script SQL</button>
         <p id="status"></p>
     </div>
@@ -20,8 +20,7 @@
             statusElement.textContent = 'Generando script SQL...';
 
             try {
-                // Hacer una solicitud POST a la ruta '/generate-sql-script' usando Axios
-                const response = await axios.post('/generate-sql-script', { responseType: 'blob' });
+                const response = await axios.post('/generate-sql-script', {}, { responseType: 'blob' });
                 if (response.status === 200) {
                     const url = window.URL.createObjectURL(new Blob([response.data]));
                     const link = document.createElement('a');
