mejorando la interfaz

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Generador de Script SQL de Versiones...</h1>
-        <button id="generateBtn">Generar Script SQL</button>
+        <h1>Descargar Script SQL de Versiones...</h1>
+        <button id="generateBtn">Descargar Script SQL</button>
         <p id="status"></p>
     </div>
 
